--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,12 @@
 <body>
 <header class="page-header">
 
-    <a href="/index.html" class="logo"><span class="web">Web</span>Studio</a>
+    <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
 
     <ul class="nav-menu">
 
         <li><a href="#">Agencja</a></li>
-        <li><a href="/portfolio.html">Portfolio</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
         <li><a href="#">Kontakt</a></li>
 
     </ul>
