--- a/index.html
+++ b/index.html
@@ -112,13 +112,9 @@
 
     <div class="container">
 
-        <section class="footer-logo">
-            <a href="index.html"><span class="web">Web</span>Studio</a>
-        </section>
-
-
-        <address class='contact'>
+      <address class='contact'>
             <ul class="footer-contact">
+                <li class="footer-logo"><a href="index.html"><span class="web">Web</span>Studio</a></li>
                 <li>m. Warszawa, Aleje Jerozolimskie 21</li>
                 <li><a href="mailto:info@example.com" class="transparent">info@example.com</a></li>
                 <li><a href="tel:+48111111111" class="transparent">+48 111 111 111</a></li>
