--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,16 @@
     <header>
         <div class="container">
             <nav class="navigation">
+                <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
+
                 <ul class="nav-menu">
-                    <li><a href="./index.html" class="logo"><span class="web">Web</span>Studio</a></li>
+                    <li></li>
                     <li><a href="#">Agencja</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
                     <li><a href="#">Kontakt</a></li>
 
                 </ul>
-
+        
                 <address class="header-address">
                     <ul>
                         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -127,13 +129,9 @@
 
     <div class="container">
 
-        <section class="footer-logo">
-            <a href="index.html"><span class="web">Web</span>Studio</a>
-        </section>
-
-
         <address class='contact'>
             <ul class="footer-contact">
+                <li class="footer-logo"><a href="index.html"><span class="web">Web</span>Studio</a></li>
                 <li>m. Warszawa, Aleje Jerozolimskie 21</li>
                 <li><a href="mailto:info@example.com" class="transparent">info@example.com</a></li>
                 <li><a href="tel:+48111111111" class="transparent">+48 111 111 111</a></li>
@@ -146,4 +144,5 @@
 
 </body>
 
+</html>
 </html>
